# ComicPacker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ComicPacker.spec  LICENSE  README.md  SECURITY.md  build_exe.py  main.py  manage_version.py  pack_comic.py  pyproject.toml  requirements.txt  setup.py  version.py
