[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ComicPacker"
description = "A tool for packing comic images into CBZ format"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ComicPacker Team", email = "comicpacker@example.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "cbz>=3.3.7",
    "pyinstaller>=5.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yourusername/ComicPacker"
Repository = "https://github.com/yourusername/ComicPacker"
"Bug Tracker" = "https://github.com/yourusername/ComicPacker/issues"

[project.scripts]
comicpacker = "main:main"

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false